--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,2 +1,9 @@
 .App {
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  background-color: var(--second-color);
+
+  min-height: 100vh;
 }
