--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,9 +1,17 @@
 .App {
   padding: 50px 0;
   display: flex;
-  justify-content: center;
-  margin: auto;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 auto;
   background-color: var(--second-color);
 
   min-height: 100vh;
+}
+
+.Title {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 50px;
 }
