--- a/src/features/TaskList/TaskList.module.scss
+++ b/src/features/TaskList/TaskList.module.scss
@@ -4,12 +4,13 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  min-height: 30%;
+  min-height: 30vh;
 }
 
 .TaskListContent {
   background-color: aliceblue;
   width: 100%;
   border-right: 2px solid #333;
+  border-left: 2px solid #333;
   border-radius: 0 0 10px 10px;
 }
