--- a/src/entities/TaskItem/TaskItem.module.scss
+++ b/src/entities/TaskItem/TaskItem.module.scss
@@ -15,6 +15,14 @@
 
   text-align: left;
   align-items: center;
+  p {
+    max-width: 100%;
+    width: 100%;
+    word-wrap: wrap;
+    text-wrap: wrap;
+    overflow-wrap: break-word;
+    word-break: break-all;
+  }
 }
 
 .btnBlock {
